// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`selectInputField > should display right value on grouped options 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="uv_uf6pag0"
      >
        <div
          aria-controls="_r_l_"
          aria-describedby="_r_l_"
          class="uv_w40vpo9 uv_w40vpob"
          tabindex="-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
          >
            <div
              aria-controls="_r_l_"
              aria-expanded="true"
              aria-label=""
              class="uv_r8qe46 uv_r8qe45 uv_r8qe48 uv_r8qe4a uv_r8qe4e uv_r8qe4g"
              data-disabled="false"
              data-readonly="false"
              data-testid="select-input-test"
              id="_r_k_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="uv_r8qe4m uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow1a uv_m4c9ow32"
              >
                Mercury
              </span>
              <div
                class="uv_r8qe42 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="uv_igqisu1 uv_w40vpo4"
            id="_r_l_"
            role="dialog"
            style="--uv_ozfz3c0: -5px; --uv_ozfz3c1: 0px; --uv_ozfz3c2: rotate(180deg); --uv_ozfz3c4: translate3d(0px, 4px, 0); --uv_ozfz3c5: 0ms; --uv_ozfz3c6: translate3d(0px, 4px, 0); --uv_ozfz3c7: 100%; --uv_igqisu0: 100%; opacity: 1;"
          >
            <div
              class="uv_w40vpo2"
            >
              <div
                class="uv_toi52u0 uv_toi52u2d"
              >
                <div
                  class="uv_igqisu2 uv_toi52u0 uv_toi52u2d"
                  data-grouped="true"
                  id="select-dropdown"
                  role="listbox"
                >
                  <div
                    class="uv_toi52u0 uv_toi52u2d uv_toi52u5d"
                  >
                    <div
                      class="uv_igqisu9"
                    >
                      <button
                        class="uv_igqisu4"
                        data-selectgroup="false"
                        data-testid="group-0"
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owp uv_m4c9ow1a uv_m4c9ow32"
                          style="--uv_qabug40: left;"
                        >
                          JOVIAN PLANETS
                        </span>
                      </button>
                    </div>
                    <div
                      class="uv_toi52u0 uv_toi52u2d uv_toi52u5d"
                      id="items"
                    >
                      <div
                        aria-disabled="false"
                        aria-label="jupiter"
                        aria-selected="false"
                        class="uv_igqisuc uv_igqisub uv_igqisua uv_igqisue"
                        data-testid="option-jupiter"
                        id="option-0"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u5j"
                          data-testid="option-stack-jupiter"
                        >
                          <div
                            class="uv_igqisuo uv_toi52u0 uv_toi52u2j uv_toi52u5j uv_toi52u77"
                          >
                            <span
                              class="uv_igqisun uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owj uv_m4c9ow1a"
                              style="--uv_qabug40: left;"
                            >
                              Jupiter
                            </span>
                          </div>
                          <span
                            class="uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owb uv_m4c9owk uv_m4c9ow1d uv_m4c9ow35"
                            style="--uv_qabug40: left;"
                          >
                            Jupiter is the fifth planet from the Sun and the largest in the Solar System. It is a gas giant with a mass more than two and a half times that of all the other planets in the Solar System combined, and slightly less than one one-thousandth the mass of the Sun.
                          </span>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="saturn"
                        aria-selected="false"
                        class="uv_igqisuc uv_igqisub uv_igqisua uv_igqisue"
                        data-testid="option-saturn"
                        id="option-1"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u5j"
                          data-testid="option-stack-saturn"
                        >
                          <div
                            class="uv_igqisuo uv_toi52u0 uv_toi52u2j uv_toi52u5j uv_toi52u77"
                          >
                            <span
                              class="uv_igqisun uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owj uv_m4c9ow1a"
                              style="--uv_qabug40: left;"
                            >
                              Saturn
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="uranus"
                        aria-selected="false"
                        class="uv_igqisuc uv_igqisub uv_igqisua uv_igqisue"
                        data-testid="option-uranus"
                        id="option-2"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u5j"
                          data-testid="option-stack-uranus"
                        >
                          <div
                            class="uv_igqisuo uv_toi52u0 uv_toi52u2j uv_toi52u5j uv_toi52u77"
                          >
                            <span
                              class="uv_igqisun uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owj uv_m4c9ow1a"
                              style="--uv_qabug40: left;"
                            >
                              Uranus
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="neptune"
                        aria-selected="false"
                        class="uv_igqisuc uv_igqisub uv_igqisua uv_igqisue"
                        data-testid="option-neptune"
                        id="option-3"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u5j"
                          data-testid="option-stack-neptune"
                        >
                          <div
                            class="uv_igqisuo uv_toi52u0 uv_toi52u2j uv_toi52u5j uv_toi52u77"
                          >
                            <span
                              class="uv_igqisun uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owj uv_m4c9ow1a"
                              style="--uv_qabug40: left;"
                            >
                              Neptune
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="uv_toi52u0 uv_toi52u2d uv_toi52u5d"
                  >
                    <div
                      class="uv_igqisu9"
                    >
                      <button
                        class="uv_igqisu4"
                        data-selectgroup="false"
                        data-testid="group-1"
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owp uv_m4c9ow1a uv_m4c9ow32"
                          style="--uv_qabug40: left;"
                        >
                          TERRESTRIAL PLANETS
                        </span>
                      </button>
                    </div>
                    <div
                      class="uv_toi52u0 uv_toi52u2d uv_toi52u5d"
                      id="items"
                    >
                      <div
                        aria-disabled="false"
                        aria-label="mercury"
                        aria-selected="true"
                        class="uv_igqisuc uv_igqisub uv_igqisua uv_igqisud uv_igqisue"
                        data-testid="option-mercury"
                        id="option-0"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u5j"
                          data-testid="option-stack-mercury"
                        >
                          <div
                            class="uv_igqisuo uv_toi52u0 uv_toi52u2j uv_toi52u5j uv_toi52u77"
                          >
                            <span
                              class="uv_igqisun uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owj uv_m4c9ow1a"
                              style="--uv_qabug40: left;"
                            >
                              Mercury
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="venus"
                        aria-selected="false"
                        class="uv_igqisuc uv_igqisub uv_igqisua uv_igqisue"
                        data-testid="option-venus"
                        id="option-1"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u5j"
                          data-testid="option-stack-venus"
                        >
                          <div
                            class="uv_igqisuo uv_toi52u0 uv_toi52u2j uv_toi52u5j uv_toi52u77"
                          >
                            <span
                              class="uv_igqisun uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owj uv_m4c9ow1a"
                              style="--uv_qabug40: left;"
                            >
                              Venus
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="earth"
                        aria-selected="false"
                        class="uv_igqisuc uv_igqisub uv_igqisua uv_igqisue"
                        data-testid="option-earth"
                        id="option-2"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u5j"
                          data-testid="option-stack-earth"
                        >
                          <div
                            class="uv_igqisuo uv_toi52u0 uv_toi52u2j uv_toi52u5j uv_toi52u77"
                          >
                            <span
                              class="uv_igqisun uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owj uv_m4c9ow1a"
                              style="--uv_qabug40: left;"
                            >
                              Earth
                            </span>
                          </div>
                          <span
                            class="uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owb uv_m4c9owk uv_m4c9ow1d uv_m4c9ow35"
                            style="--uv_qabug40: left;"
                          >
                            Our home planet
                          </span>
                        </div>
                      </div>
                      <div
                        aria-disabled="true"
                        aria-label="mars"
                        aria-selected="false"
                        class="uv_igqisuc uv_igqisub uv_igqisua uv_igqisuh uv_igqisue"
                        data-testid="option-mars"
                        id="option-3"
                        role="option"
                        tabindex="-1"
                      >
                        <div
                          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u5j"
                          data-testid="option-stack-mars"
                        >
                          <div
                            class="uv_igqisuo uv_toi52u0 uv_toi52u2j uv_toi52u5j uv_toi52u77"
                          >
                            <span
                              class="uv_igqisun uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owj uv_m4c9ow1a"
                              style="--uv_qabug40: left;"
                            >
                              Mars
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="pluto"
                        aria-selected="false"
                        class="uv_igqisuc uv_igqisub uv_igqisua uv_igqisue"
                        data-testid="option-pluto"
                        id="option-4"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u5j"
                          data-testid="option-stack-pluto"
                        >
                          <div
                            class="uv_igqisuo uv_toi52u0 uv_toi52u2j uv_toi52u5j uv_toi52u77"
                          >
                            <span
                              class="uv_igqisun uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owj uv_m4c9ow1a"
                              style="--uv_qabug40: left;"
                            >
                              Pluto
                            </span>
                          </div>
                          <span
                            class="uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owb uv_m4c9owk uv_m4c9ow1d uv_m4c9ow35"
                            style="--uv_qabug40: left;"
                          >
                            Pluto does not fit the usual classification of either terrestrial or Jovian planets, but is rocky
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="uv_uf6pag0"
      >
        <div
          aria-controls="_r_1_"
          aria-describedby="_r_1_"
          class="uv_w40vpo9 uv_w40vpob"
          tabindex="-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
          >
            <div
              aria-controls="_r_1_"
              aria-expanded="false"
              aria-label=""
              class="uv_r8qe46 uv_r8qe45 uv_r8qe4a uv_r8qe4e"
              data-disabled="false"
              data-readonly="false"
              data-testid="select-input-test"
              id="_r_0_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="uv_r8qe44 uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owb uv_m4c9owj uv_m4c9ow1d uv_m4c9ow35"
              >
                Select item
              </span>
              <div
                class="uv_r8qe42 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="uv_uf6pag0"
      >
        <div
          aria-controls="_r_6_"
          aria-describedby="_r_6_"
          class="uv_w40vpo9 uv_w40vpob"
          tabindex="-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
          >
            <div
              aria-controls="_r_6_"
              aria-expanded="false"
              aria-label=""
              class="uv_r8qe46 uv_r8qe45 uv_r8qe47 uv_r8qe4a uv_r8qe4e"
              data-disabled="true"
              data-readonly="false"
              data-testid="select-input-test"
              id="_r_5_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="uv_r8qe44 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow7 uv_m4c9owb uv_m4c9owj uv_m4c9ow25"
              >
                Select item
              </span>
              <div
                class="uv_r8qe42 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectInputField > should render correctly grouped 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="uv_uf6pag0"
      >
        <div
          aria-controls="_r_g_"
          aria-describedby="_r_g_"
          class="uv_w40vpo9 uv_w40vpob"
          tabindex="-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
          >
            <div
              aria-controls="_r_g_"
              aria-expanded="false"
              aria-label=""
              class="uv_r8qe46 uv_r8qe45 uv_r8qe4a uv_r8qe4e"
              data-disabled="false"
              data-readonly="false"
              data-testid="select-input-test"
              id="_r_f_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="uv_r8qe44 uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owb uv_m4c9owj uv_m4c9ow1d uv_m4c9ow35"
              >
                Select item
              </span>
              <div
                class="uv_r8qe42 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectInputField > should render correctly multiselect 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="uv_uf6pag0"
      >
        <div
          aria-controls="_r_b_"
          aria-describedby="_r_b_"
          class="uv_w40vpo9 uv_w40vpob"
          tabindex="-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
          >
            <div
              aria-controls="_r_b_"
              aria-expanded="false"
              aria-label=""
              class="uv_r8qe46 uv_r8qe45 uv_r8qe4a uv_r8qe4e"
              data-disabled="false"
              data-readonly="false"
              data-testid="select-input-test"
              id="_r_a_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="uv_r8qe44 uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owb uv_m4c9owj uv_m4c9ow1d uv_m4c9ow35"
              >
                Select item
              </span>
              <div
                class="uv_r8qe42 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectInputField > should trigger events 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="uv_uf6pag0"
      >
        <div
          aria-controls="_r_29_"
          aria-describedby="_r_29_"
          class="uv_w40vpo9 uv_w40vpob"
          tabindex="-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
          >
            <div
              aria-controls="_r_29_"
              aria-expanded="false"
              aria-label=""
              class="uv_r8qe46 uv_r8qe45 uv_r8qe4a uv_r8qe4e"
              data-disabled="false"
              data-readonly="false"
              data-testid="select-input-test"
              id="_r_28_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="uv_r8qe4m uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow1a uv_m4c9ow32"
              >
                Mercury
              </span>
              <div
                class="uv_r8qe42 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
